[package]
name = "Trap_the_mouse_client"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
iced = {git="https://github.com/iced-rs/iced.git", features = ["canvas", "advanced","image"] }
iced_futures = "0.13.2"
emojis="0.6.4"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }

rusttype = "0.9"
image = "0.25.5"