[package]
name = "Trap_the_mouse_client"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
iced = {git="https://github.com/iced-rs/iced.git", features = ["canvas", "advanced","image"] }
iced_futures = "0.13.2"
emojis="0.6.4"
tokio = { version = "1", features = ["full"] }
async-std = "1.10"
futures = "0.3"
rusttype = "0.9"
image = "0.25.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
iced_native = "0.10.3"
winit = "0.29.1"